# vf-declarative-gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  appdata.qrc  barchart.cpp  barchart.h  bardata.cpp  bardata.h  barscaledraw.cpp  barscaledraw.h  cbar.cpp  com5003gluelogic.cpp  com5003gluelogic.h  com5003translation.cpp  com5003translation.h  data.qrc  fftbarchart.cpp  fftbarchart.h  fpscounter.cpp  fpscounter.h  hpwbarchart.cpp  hpwbarchart.h  lupdate.pro  main.cpp  main.qml  phasordiagram.cpp  phasordiagram.h  qml.qrc  qmlfileio.cpp  qmlfileio.h  settings.json  sidescaledraw.cpp  vf-declarative-gui.pro  vf-gui-com5003.pro  zeragluelogic.cpp  zeragluelogic.h  zeratranslation.cpp
app/: CMakeLists.txt  appdata.qrc  main.cpp
app/qml/: Main.qml
app/qml/controls/: ActivityAnimation.qml  BatteryToolButton.qml  DebugRectangle.qml  FlashingRipple.qml  FpsItem.qml  GridItem.qml  GridRect.qml  MainToolBar.qml  MeasModeComboHeader.qml  NotificationManager.qml  PageGridView.qml  PagePathView.qml  PageView.qml  PhasorDiagramEx.qml  ReleaseInfo.qml  RotaryFieldIndicator.qml  ScreenShooter.qml  ScrollGroup.qml  SplashView.qml  UpdateProcess.qml  VirtualKeyboard.qml  WaitTransaction.qml
app/qml/controls/accu/: AccuToolButton.qml  AccumulatorState.qml
app/qml/controls/actual_values/: ActualValuesRow.qml  ActualValuesRowAcSum.qml  ActualValuesRowDc.qml  ActualValuesRowDcOnePhase.qml  ActualValuesRowDcPerPhase.qml  ActualValuesRowEmobDc.qml  ActualValuesRowEmobDcForAcDc.qml  ActualValuesRowNoSum.qml  TempHumidityPressureRow.qml
app/qml/controls/api/: ApiConfirmationPopup.qml
app/qml/controls/appinfo/: DeviceInformation.qml  DeviceVersions.qml  ServiceSupport.qml  StatusView.qml
app/qml/controls/energy-graphs/: EnergyGraphs.qml  EnergyGraphsYAxis.qml
app/qml/controls/error_comparison_common/: ErrorMarginView.qml  MeasurementView.qml  MeterConstantSettings.qml  MultipleErrorView.qml  ParamLineRefInputAndMMode.qml  TabButtonComparison.qml
app/qml/controls/error_comparison_params/: ParamViewComparison.qml  ParamViewQuartz.qml  ParamViewRegister.qml
app/qml/controls/fft_module/: FftCharts.qml  FftTable.qml
app/qml/controls/logger/: CustomerDataBrowser.qml  (+12 more)
app/qml/helpers/: DevelWinSizeChanger.qml  EntityErrorMeasHelper.qml  MainPagePreloader.qml  TaskList.qml
app/qml/pages/: ActualValueTabsPage.qml  ActualValuesPage.qml  BaseTabBar.qml  BaseTabPage.qml  BaseTabPageEmpty.qml  BaseTabView.qml  BurdenModulePage.qml  CEDModulePage.qml  ComparisonTabsView.qml  DCActualValueTabsPage.qml  DCActualValuesPage.qml  EMOBActualValueTabsPage.qml  EMOBActualValueTabsPageAC.qml  EMOBActualValueTabsPageDC.qml  EMOBActualValuesPage.qml  EMOBActualValuesPageAC.qml  EMOBActualValuesPageDC.qml  EnergyGraphs.qml  ErrorCalculatorModulePage.qml  ErrorRegisterModulePage.qml  FftTabPage.qml  HarmonicPowerTabPage.qml  OsciModulePage.qml  PowerModulePage.qml  QuartzModulePage.qml  RMS4PhasePage.qml  RefModulePage.qml  SourceModulePage.qml  SourceModuleTabPage.qml  TransformerModulePage.qml  VectorModulePage.qml
app/qml/singletons/: AccumulatorState.qml  AdjustmentState.qml  ColorSettings.qml  DeviceVersions.qml  FunctionTools.qml  GlobalConfig.qml  GraphFunctions.qml  MeasChannelInfo.qml  ModuleIntrospection.qml  PowerModuleVeinGetter.qml  SessionState.qml
app/staticdata/: license_index.json
app/staticdata/licenses/: aboutqt.gplv3  sortfilterproxyqml.mit  zera-opensource
lib/: CMakeLists.txt  qmlfileio.cpp
lib/itemmodels/: actualvalueemob4thphasedcmodel.cpp  actualvalueemob4thphasedcmodel.h  actualvaluelemdcperphasepmodel.cpp  actualvaluelemdcperphasepmodel.h  actualvaluelemdcperphaseumodel.cpp  actualvaluelemdcsingleimodel.cpp  actualvaluemodel.cpp  burdenvaluemodel.cpp  rowautoscaler.cpp  rowautoscaler.h  tableeventitemmodelbase.h  tablerowautoscaler.cpp  tablerowautoscaler.h
lib/itemmodels/EMOB/: actualvalueemobacsummodel.cpp  actualvalueemobacsummodel.h
lib/lib-gui/: CMakeLists.txt  authorizationrequesthandler.cpp  authorizationrequesthandler.h  gluelogicpropertymap.cpp  gluelogicpropertymap.h  jsonhelper.cpp  jsonhelper.h  qmlappstarterforapi.cpp  qmlappstarterforapi.h  qmlappstarterforwebgl.cpp  qmlappstarterforwebgl.h  qmlappstarterforwebserver.cpp  qmlappstarterforwebserver.h  qmlfileio.cpp  qmlfileio.h  screencapture.cpp  screencapture.h  tableeventconsumer.cpp  tableeventconsumer.h  vfcomponenteventdispatcher.h  vfeventconsumerinterface.h
lib/lib-gui/itemmodels/: actualvaluemodel.cpp  actualvaluemodel.h  actualvaluemodelbase.cpp  actualvaluemodelbase.h  actualvaluemodelwithaux.cpp  actualvaluemodelwithaux.h  burdenmodeli.cpp  burdenmodeli.h  burdenmodelu.cpp  burdenmodelu.h  burdenvaluemodel.cpp  burdenvaluemodel.h  ffttablemodel.cpp  ffttablemodel.h  oscimodel.cpp  oscimodel.h  rowautoscaler.h  tableeventitemmodelbase.cpp  tableeventitemmodelbase.h  tablerowautoscaler.cpp  tablerowautoscaler.h
lib/lib-headless/: CMakeLists.txt  axisautoscaler.cpp  axisautoscaler.h  jsonhelper.cpp  jsonhelper.h  jsonsettingsfile.cpp  jsonsettingsfile.h  qmlfileio.cpp  qmlfileio.h  rowautoscaler.cpp  rowautoscaler.h  singlevaluescaler.cpp  singlevaluescaler.h  updatewrapper.cpp  updatewrapper.h  vfcomponenteventdispatcher.cpp  vfcomponenteventdispatcher.h  vfrecorderjsonhelper.cpp  vfrecorderjsonhelper.h
lib/lib-headless/energy-graphs/: CMakeLists.txt
lib/lib-headless/recorder-caching/: CMakeLists.txt  recordercaching.cpp  recordercaching.h  recorderfetchandcache.cpp  recorderfetchandcache.h
lib/lib-headless/vf-recorder/: CMakeLists.txt  veindatacollector.cpp  veindatacollector.h  vf_recorder.cpp  vf_recorder.h
lib/tests/: CMakeLists.txt  test_axisautoscaler.cpp  test_axisautoscaler.h  test_recorder_caching.cpp  test_recorder_caching.h  test_rowautoscaler.cpp  test_updatewrapper.cpp
lib/tests/test-data/: mt310s2-emob-session-dc.json  testdata.qrc
tests/: CMakeLists.txt  test_rowautoscaler.cpp  test_rowautoscaler.h  test_veindisributor.cpp  test_veindisributor.h  test_veineventdispatcher.cpp  test_veineventdispatcher.h  veinconsumermock.cpp  veinconsumermock.h
(+423 files in other folders)
